--- a/app/src/main/res/layout/activity_menu_list.xml
+++ b/app/src/main/res/layout/activity_menu_list.xml
@@ -36,6 +36,27 @@
             android:stretchMode="columnWidth">
 
         </ListView>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="85dp"
+        android:orientation="vertical"
+        android:gravity="bottom|center"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/adViewList"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="bottom|center"
+            app:adSize="BANNER"
+            app:adUnitId="ca-app-pub-3940256099942544/6300978111">
+
+        </com.google.android.gms.ads.AdView>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
